tree-sitter-hek/grammar.js
    source_file: ($) => repeat($._declaration),

    // Only `//` to end of line. There are no block comments (lex.rs `skip_trivia`).
    _declaration: ($) =>
      choice(
        $.enum_declaration,
        $.record_declaration,
        $.const_declaration,
        $.secret_declaration,
        $.subject_declaration,
        $.function_declaration,
        $.event_declaration,
        $.refusal_declaration,
        $.command_declaration,
        $.guard_definition,
        $.projector_declaration,
        $.effect_declaration,
        $.test_declaration,
      ),

    test_declaration: ($) =>
      seq('test', field('name', $.string), field('body', $.test_body)),

    // Every word here but `test` is soft: claimed inside a test body and an ordinary
    // name everywhere else (docs/testing.md rule 1).
    test_body: ($) =>
      seq(
        '{',
        repeat($.given_clause),
        repeat(choice($.respond_clause, $.erased_clause, $.secret_clause)),
        optional($._action_clause),
        repeat($.expect_clause),
        '}',
      ),

    // Two shapes and only two: the event written out, or a call to a `fn` that makes
    // one with the fields this case is about after it (docs/testing.md rule 2). `{` is
    // not in a given's follow set, so the optional block is a one-token decision.
    given_clause: ($) =>
      seq(
        'given',
        choice(
          seq(field('path', $.event_path), $.field_initializer_list),
          seq(
            field('fixture', $.call_expression),
            optional($.field_initializer_list),
          ),
        ),
      ),

    respond_clause: ($) =>
      seq(
        'respond',
        field('url', $._expression),
        choice(
          'timeout',
          seq(field('status', $.integer_literal), optional($.object_literal)),
        ),
      ),

    erased_clause: ($) =>
      seq('erased', field('subject', $.identifier), field('id', $._expression)),

    // The fourth setup lever (docs/testing.md section 3). It shares its word with the
    // declaration above, which is the one word this construct does not reserve for
    // itself; both are soft.
    secret_clause: ($) =>
      seq('secret', field('name', $.identifier), '=', field('value', $._expression)),

    _action_clause: ($) =>
      choice($.run_clause, $.project_clause, $.deliver_clause),

    run_clause: ($) =>
      seq('run', field('command', $.identifier), $.field_initializer_list),

    project_clause: ($) => seq('project', field('projector', $.identifier)),

    deliver_clause: ($) => seq('deliver', field('effect', $.identifier)),

    expect_clause: ($) => seq('expect', optional($._expectation)),

    _expectation: ($) =>
      choice(
        'nothing',
        'skipped',
        $.event_expectation,
        $.fixture_expectation,
        $.row_expectation,
        $.outcome_expression,
        $.refusal_expression,
        $.fail_statement,
        $.invoke_expression,
        $.call_expression,
        $.method_call,
      ),

    event_expectation: ($) =>
      seq(field('path', $.event_path), $.field_initializer_list),

    // `expect t_order(9002) { status: Edited }`: the event a `fn` made, with the fields
    // this case is about written over it. The block is required rather than optional,
    // which is what keeps this apart from the bare `call_expression` already in the
    // choice above: `expect t_order(9002)` is that, the way `expect log("x")` is.
    row_expectation: ($) =>
      seq(
        optional('no'),
        field('entity', $.identifier),
        '[',
        field('key', $._expression),
        ']',
        optional($.field_initializer_list),
      ),

    // ------------------------------------------------------------------ statements

    outcome_expression: ($) =>
      prec.right(seq('invalid', field('message', choice($.string, $.raw_string)))),

    refusal_expression: ($) =>
      prec.right(
        seq(
          'reject',
          field('name', $._type_name),
          optional(field('fields', $.field_initializer_list)),
        ),
      ),

    _type_name: ($) => alias($.identifier, $.type_identifier),

    // ----------------------------------------------------------------- expressions

    _expression: ($) =>
      choice($._primary, $.unary_expression, $.binary_expression),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(field('function', $.identifier), field('arguments', $.arguments)),
      ),

    method_call: ($) =>
      prec(
        PREC.call,
        seq(
          field('receiver', $._expression),
          '.',
          field('method', $.identifier),
          field('arguments', $.arguments),
        ),
      ),

    // Parenless, so a field rather than a method. Only a `Response`, a record and the
    // `as` envelope have any (parse.rs `postfix_expr`).
    arguments: ($) =>
      seq('(', commaSep(choice($.named_argument, $._expression)), ')'),

    invoke_expression: ($) =>
      seq('invoke', field('command', $.identifier), $.field_initializer_list),

    // `{ field: value, shorthand }`, shared by emit, put, patch, record literals,
    // invoke, given, run and every expectation that names fields.
    field_initializer_list: ($) =>
      seq('{', commaSep($.field_initializer), '}'),

    field_initializer: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('value', $._expression))),
      ),

    // An object key is a quoted string (parse.rs `object_literal`).
    object_literal: ($) => seq('{', commaSep($.object_entry), '}'),

    object_entry: ($) =>
      seq(
        field('key', choice($.string, $.raw_string)),
        ':',
        field('value', $._expression),
      ),

    boolean_literal: (_) => choice('true', 'false'),

    none_literal: (_) => 'none',

    // ASCII digits, no separators, no exponent, no suffix, and the `.` is taken only
    // when a digit follows (lex.rs `number`).
    decimal_literal: (_) => token(prec(1, /[0-9]+\.[0-9]+/)),

    integer_literal: (_) => token(/[0-9]+/),

    // `"""..."""` is fully raw and must be tried before `"` (lex.rs `raw_text`).
    string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
        token.immediate('"'),
      ),

    string_content: (_) => token.immediate(prec(1, /[^"\\{]+/)),

    _at_name: (_) =>
      token(/@[_\p{L}][_\p{L}\p{N}]*(\.[_\p{L}][_\p{L}\p{N}]*)*/),

    event_path: ($) => $._at_name,

    identifier: (_) => /[_\p{L}][_\p{L}\p{N}]*/,
  },
});
